--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,4 +1,5 @@
-
-<div ui-view>
-    <h1>Hello world</h1>
-</div>
+<body ng-app='app'>
+    <div ui-view>
+<!--        <h1>Hello world</h1>-->
+    </div>
+</body>
