--- a/.tmp/public/templates/register.html
+++ b/.tmp/public/templates/register.html
@@ -1,15 +1,1 @@
-<section ng-control="registerCtrl">
-    <div class="login" id="register">
-        <nav><h1>Register With Us Today!</h1></nav>
-        <div>
-            <input ng-change="userValidation()" ng-model="userName" type="text" placeholder="Username">
-        </div>
-        <div>
-            <input ng-change="emailValidation()" ng-model="emailName" type="text" placeholder="Email">
-        </div>
-        <div>
-            <input ng-change="passValidation()" ng-model="password" type="password" placeholder="Password">
-        </div>
-        <button type="submit" ng-click="validation()">Login</button>
-    </div>
-</section>
+<p>Register</p>
