--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,5 +1,9 @@
 <body ng-app='app'>
     <div ui-view>
-<!--        <h1>Hello world</h1>-->
+        <a href="#" ui-sref-active="active" ui-sref="home"><span>Home</span></a>
+        <a href="#" ui-sref-active="active" ui-sref="login"><span>Login</span></a>
+        <a href="#" ui-sref-active="active" ui-sref="register"><span>Register</span></a>
+        <a href="#" ui-sref-active="active" ui-sref="dashboard"><span>Dashboard</span></a> 
+<!--			<a href="#" ui-sref-active="active" ui-sref="create-assignment"><span>Create Assignment</span></a>    -->
     </div>
 </body>
